src/test/ui/pattern/usefulness/always-inhabited-union-ref.stderr
error[E0004]: non-exhaustive patterns: type `&!` is non-empty
  --> $DIR/always-inhabited-union-ref.rs:23:11
   |
LL |     match uninhab_ref() {
   |           ^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&!`
   = note: references are always considered inhabited

error[E0004]: non-exhaustive patterns: type `Foo` is non-empty
  --> $DIR/always-inhabited-union-ref.rs:27:11
   |
LL | / pub union Foo {
LL | |     foo: !,
LL | | }
   | |_- `Foo` defined here
...
LL |       match uninhab_union() {
   |             ^^^^^^^^^^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
